--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,37 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      #- uses: actions/checkout@v2
-      #- run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      #- run: docker build -t jtvertigo/react-test -f Dockerfile.dev .
-      #- run: docker run -e CI=true jtvertigo/react-test npm run test
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with: 
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-          
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-        
-      - name: Build
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          context: ./
-          file: ./Dockerfile.dev
-          builder: ${{ steps.buildx.outputs.name }}
-          push: false 
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/react-test:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache      
-
-      - name: Run
-        id: docker_run
-        uses: docker/build-run-action@v2
-        with:
-          context: ./
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/react-test:latest
-          run: npm run test
+      - uses: actions/checkout@v2
+      - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - run: docker build -t jtvertigo/react-test -f Dockerfile.dev .
+      - run: docker run -e CI=true jtvertigo/react-test npm run test
